fix: alterações para deixar o projeto de acordo com os padrões da VPS
